refactor: Remove Gemini AI dependency and simplify story generation
This commit removes the dependency on the Gemini AI API and associated libraries. The story generation functionality has been converted to a local-only, placeholder implementation. This change simplifies the application's architecture and removes the need for an API key for basic functionality.

The following changes were made:
- Removed `@google/genai` from `package.json` and `vite.config.ts`.
- Removed Gemini API key handling and related logic from `index.html` and `services/geminiService.ts`.
- Updated `services/geminiService.ts` to provide a local placeholder for story generation.
- Adjusted `App.tsx` to fetch quotes using the `level.name` instead of `level.tier` for potentially more granular practice generation.
- Added more quotes to `data/quotes.ts` to enrich the typing content.
- Made minor UI adjustments to `components/ProgressBar.tsx` and the header in `App.tsx` for better layout.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.560.0",
-    "canvas-confetti": "1.9.2",
-    "@google/genai": "^1.33.0"
+    "canvas-confetti": "1.9.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
