--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.560.0",
-    "canvas-confetti": "1.9.2"
+    "canvas-confetti": "1.9.2",
+    "epubjs": "0.3.93",
+    "pdfjs-dist": "4.5.136"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
